grammar/LangParser.py
# Generated from Lang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LangParser ( Parser ):

    grammarFileName = "Lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'numero'", "'texto'", "'('", "')'", "'{'", 
                     "'}'", "'='", "','", "'+'", "'-'", "'*'", "'/'", "'&&'", 
                     "'||'", "'!'", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'!='", "'\\U0001F44D'", "'\\U0001F44E'", "'\\U0001F914'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\u21A9\\uFE0F'", "<INVALID>", "<INVALID>", "'\\u270F\\uFE0F'", 
                     "'\\U0001F4D6'", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "OE", "CE", 
                      "OB", "CB", "AT", "SEP", "PLUS", "MINUS", "MULT", 
                      "DIV", "AND", "OR", "NOT", "EQ", "LT", "GT", "LE", 
                      "GE", "NE", "BOOL_TRUE", "BOL_FALSE", "IF", "WHILE", 
                      "DO", "FOR", "FUNCTION", "RETURN", "THEN", "ELSE", 
                      "WRITE", "READ", "STR", "EOL", "NUM", "VAR", "COMMENT", 
                      "WS" ]

    RULE_prog = 0
    RULE_start_ = 1
    RULE_functions = 2
    RULE_function = 3
    RULE_fnBlock = 4
    RULE_fnBody = 5
    RULE_params = 6
    RULE_line = 7
    RULE_funcInvoc = 8
    RULE_stmt = 9
    RULE_input = 10
    RULE_output = 11
    RULE_tipo = 12
    RULE_ifst = 13
    RULE_whilest = 14
    RULE_forst = 15
    RULE_block = 16
    RULE_cond = 17
    RULE_atrib = 18
    RULE_expr = 19
    RULE_term = 20
    RULE_factor = 21

    ruleNames =  [ "prog", "start_", "functions", "function", "fnBlock", 
                   "fnBody", "params", "line", "funcInvoc", "stmt", "input", 
                   "output", "tipo", "ifst", "whilest", "forst", "block", 
                   "cond", "atrib", "expr", "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    OE=3
    CE=4
    OB=5
    CB=6
    AT=7
    SEP=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    AND=13
    OR=14
    NOT=15
    EQ=16
    LT=17
    GT=18
    LE=19
    GE=20
    NE=21
    BOOL_TRUE=22
    BOL_FALSE=23
    IF=24
    WHILE=25
    DO=26
    FOR=27
    FUNCTION=28
    RETURN=29
    THEN=30
    ELSE=31
    WRITE=32
    READ=33
    STR=34
    EOL=35
    NUM=36
    VAR=37
    COMMENT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_prog

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgLineContext(ProgContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.ProgContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functions(self):
            return self.getTypedRuleContext(LangParser.FunctionsContext,0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.LineContext)
            else:
                return self.getTypedRuleContext(LangParser.LineContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgLine" ):
                listener.enterProgLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgLine" ):
                listener.exitProgLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgLine" ):
                return visitor.visitProgLine(self)
            else:
                return visitor.visitChildren(self)



    def prog(self):

        localctx = LangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            localctx = LangParser.ProgLineContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.functions()
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self.line()
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 176345317382) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExprContext)
            else:
                return self.getTypedRuleContext(LangParser.ExprContext,i)


        def EOF(self):
            return self.getToken(LangParser.EOF, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.EOL)
            else:
                return self.getToken(LangParser.EOL, i)

        def getRuleIndex(self):
            return LangParser.RULE_start_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_" ):
                listener.enterStart_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_" ):
                listener.exitStart_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_" ):
                return visitor.visitStart_(self)
            else:
                return visitor.visitChildren(self)




    def start_(self):

        localctx = LangParser.Start_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.expr()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 51
                self.match(LangParser.EOL)
                self.state = 52
                self.expr()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(LangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(LangParser.FunctionContext,0)


        def functions(self):
            return self.getTypedRuleContext(LangParser.FunctionsContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions" ):
                listener.enterFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions" ):
                listener.exitFunctions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctions" ):
                return visitor.visitFunctions(self)
            else:
                return visitor.visitChildren(self)




    def functions(self):

        localctx = LangParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functions)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.function()
                self.state = 61
                self.functions()
                pass
            elif token in [1, 2, 24, 25, 26, 27, 32, 35, 37]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(LangParser.FUNCTION, 0)

        def VAR(self):
            return self.getToken(LangParser.VAR, 0)

        def OE(self):
            return self.getToken(LangParser.OE, 0)

        def params(self):
            return self.getTypedRuleContext(LangParser.ParamsContext,0)


        def CE(self):
            return self.getToken(LangParser.CE, 0)

        def fnBlock(self):
            return self.getTypedRuleContext(LangParser.FnBlockContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = LangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(LangParser.FUNCTION)
            self.state = 67
            self.match(LangParser.VAR)
            self.state = 68
            self.match(LangParser.OE)
            self.state = 69
            self.params()
            self.state = 70
            self.match(LangParser.CE)
            self.state = 71
            self.fnBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FnBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_fnBlock

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FnBlockLineContext(FnBlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.FnBlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OB(self):
            return self.getToken(LangParser.OB, 0)
        def fnBody(self):
            return self.getTypedRuleContext(LangParser.FnBodyContext,0)

        def CB(self):
            return self.getToken(LangParser.CB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnBlockLine" ):
                listener.enterFnBlockLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnBlockLine" ):
                listener.exitFnBlockLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnBlockLine" ):
                return visitor.visitFnBlockLine(self)
            else:
                return visitor.visitChildren(self)



    def fnBlock(self):

        localctx = LangParser.FnBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fnBlock)
        try:
            localctx = LangParser.FnBlockLineContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(LangParser.OB)
            self.state = 74
            self.fnBody()
            self.state = 75
            self.match(LangParser.CB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FnBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_fnBody

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FnReturnLineContext(FnBodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.FnBodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(LangParser.RETURN, 0)
        def EOL(self):
            return self.getToken(LangParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnReturnLine" ):
                listener.enterFnReturnLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnReturnLine" ):
                listener.exitFnReturnLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnReturnLine" ):
                return visitor.visitFnReturnLine(self)
            else:
                return visitor.visitChildren(self)


    class FnBodyLineContext(FnBodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.FnBodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def line(self):
            return self.getTypedRuleContext(LangParser.LineContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnBodyLine" ):
                listener.enterFnBodyLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnBodyLine" ):
                listener.exitFnBodyLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnBodyLine" ):
                return visitor.visitFnBodyLine(self)
            else:
                return visitor.visitChildren(self)


    class FnReturnExprLineContext(FnBodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.FnBodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(LangParser.RETURN, 0)
        def expr(self):
            return self.getTypedRuleContext(LangParser.ExprContext,0)

        def EOL(self):
            return self.getToken(LangParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnReturnExprLine" ):
                listener.enterFnReturnExprLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnReturnExprLine" ):
                listener.exitFnReturnExprLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnReturnExprLine" ):
                return visitor.visitFnReturnExprLine(self)
            else:
                return visitor.visitChildren(self)


    class FnBodyLineMoreContext(FnBodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.FnBodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def line(self):
            return self.getTypedRuleContext(LangParser.LineContext,0)

        def fnBody(self):
            return self.getTypedRuleContext(LangParser.FnBodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFnBodyLineMore" ):
                listener.enterFnBodyLineMore(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFnBodyLineMore" ):
                listener.exitFnBodyLineMore(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFnBodyLineMore" ):
                return visitor.visitFnBodyLineMore(self)
            else:
                return visitor.visitChildren(self)



    def fnBody(self):

        localctx = LangParser.FnBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fnBody)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = LangParser.FnBodyLineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.line()
                pass

            elif la_ == 2:
                localctx = LangParser.FnBodyLineMoreContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.line()
                self.state = 79
                self.fnBody()
                pass

            elif la_ == 3:
                localctx = LangParser.FnReturnExprLineContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.match(LangParser.RETURN)
                self.state = 82
                self.expr()
                self.state = 83
                self.match(LangParser.EOL)
                pass

            elif la_ == 4:
                localctx = LangParser.FnReturnLineContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.match(LangParser.RETURN)
                self.state = 86
                self.match(LangParser.EOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LangParser.VAR, 0)

        def SEP(self):
            return self.getToken(LangParser.SEP, 0)

        def params(self):
            return self.getTypedRuleContext(LangParser.ParamsContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = LangParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(LangParser.VAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(LangParser.VAR)
                self.state = 91
                self.match(LangParser.SEP)
                self.state = 92
                self.params()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_line

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LineWhileContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whilest(self):
            return self.getTypedRuleContext(LangParser.WhilestContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineWhile" ):
                listener.enterLineWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineWhile" ):
                listener.exitLineWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineWhile" ):
                return visitor.visitLineWhile(self)
            else:
                return visitor.visitChildren(self)


    class LineEOLContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOL(self):
            return self.getToken(LangParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineEOL" ):
                listener.enterLineEOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineEOL" ):
                listener.exitLineEOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineEOL" ):
                return visitor.visitLineEOL(self)
            else:
                return visitor.visitChildren(self)


    class LineStmtContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(LangParser.StmtContext,0)

        def EOL(self):
            return self.getToken(LangParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineStmt" ):
                listener.enterLineStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineStmt" ):
                listener.exitLineStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineStmt" ):
                return visitor.visitLineStmt(self)
            else:
                return visitor.visitChildren(self)


    class LineIfContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifst(self):
            return self.getTypedRuleContext(LangParser.IfstContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineIf" ):
                listener.enterLineIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineIf" ):
                listener.exitLineIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineIf" ):
                return visitor.visitLineIf(self)
            else:
                return visitor.visitChildren(self)


    class LineForContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forst(self):
            return self.getTypedRuleContext(LangParser.ForstContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineFor" ):
                listener.enterLineFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineFor" ):
                listener.exitLineFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineFor" ):
                return visitor.visitLineFor(self)
            else:
                return visitor.visitChildren(self)



    def line(self):

        localctx = LangParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_line)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 32, 37]:
                localctx = LangParser.LineStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.stmt()
                self.state = 97
                self.match(LangParser.EOL)
                pass
            elif token in [24]:
                localctx = LangParser.LineIfContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.ifst()
                pass
            elif token in [25, 26]:
                localctx = LangParser.LineWhileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.whilest()
                pass
            elif token in [27]:
                localctx = LangParser.LineForContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.forst()
                pass
            elif token in [35]:
                localctx = LangParser.LineEOLContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.match(LangParser.EOL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncInvocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_funcInvoc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncInvocLineContext(FuncInvocContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.FuncInvocContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(LangParser.VAR, 0)
        def OE(self):
            return self.getToken(LangParser.OE, 0)
        def params(self):
            return self.getTypedRuleContext(LangParser.ParamsContext,0)

        def CE(self):
            return self.getToken(LangParser.CE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncInvocLine" ):
                listener.enterFuncInvocLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncInvocLine" ):
                listener.exitFuncInvocLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncInvocLine" ):
                return visitor.visitFuncInvocLine(self)
            else:
                return visitor.visitChildren(self)



    def funcInvoc(self):

        localctx = LangParser.FuncInvocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcInvoc)
        try:
            localctx = LangParser.FuncInvocLineContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(LangParser.VAR)
            self.state = 106
            self.match(LangParser.OE)
            self.state = 107
            self.params()
            self.state = 108
            self.match(LangParser.CE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StmtOutputContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def output(self):
            return self.getTypedRuleContext(LangParser.OutputContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtOutput" ):
                listener.enterStmtOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtOutput" ):
                listener.exitStmtOutput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtOutput" ):
                return visitor.visitStmtOutput(self)
            else:
                return visitor.visitChildren(self)


    class StmtInputContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def input_(self):
            return self.getTypedRuleContext(LangParser.InputContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtInput" ):
                listener.enterStmtInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtInput" ):
                listener.exitStmtInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtInput" ):
                return visitor.visitStmtInput(self)
            else:
                return visitor.visitChildren(self)


    class StmtAtribContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atrib(self):
            return self.getTypedRuleContext(LangParser.AtribContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtAtrib" ):
                listener.enterStmtAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtAtrib" ):
                listener.exitStmtAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtAtrib" ):
                return visitor.visitStmtAtrib(self)
            else:
                return visitor.visitChildren(self)


    class LineFuncInvocContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcInvoc(self):
            return self.getTypedRuleContext(LangParser.FuncInvocContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineFuncInvoc" ):
                listener.enterLineFuncInvoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineFuncInvoc" ):
                listener.exitLineFuncInvoc(self)
